Added env to the frontend to differnte between dev and production

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "authentication",
+  "name": "employee-manager-frontend-dev",
   "version": "1.0.0",
   "description": "simple use of passport-local authentiction",
   "main": "server.js",
   "scripts": {
     "server": "nodemon server/index.js  --watch ./server",
-    "start": "node server/index.js  "
+    "start": "node server/index.js ",
+    "build": "npx snowpack build"
   },
   "repository": {
     "type": "git",
